# mcrl

./: .gitignore  README.md  benchmark.py  pyproject.toml  test_env.py
docs/: mcrl_env_v0.md  optimization-analysis.md  technical-report.md  training-spec.md
docs/grok-research/: round1.md  round2.md  round3.md  round4.md
experiments/configs/: baseline.yaml
experiments/runs/checkpoints/: metadata_13238272.json
experiments/runs/ppo_20251216_142047/: config.yaml
experiments/runs/ppo_20251216_191023/: config.yaml
experiments/runs/ppo_20251216_191134/: config.yaml
experiments/scripts/: benchmark_optimizations.py  eval.py  eval_pygame.py  eval_visualize.py  export_weights.py  preflight.py  train.py
mcrl/: __init__.py  env.py
mcrl/core/: __init__.py  constants.py  state.py  types.py
mcrl/dashboard/: __init__.py  metrics.py  server.py
mcrl/dashboard/templates/: index.html
mcrl/systems/: __init__.py  actions.py  crafting.py  inventory.py  mining.py  physics.py  world_gen.py
mcrl/training/: __init__.py  config.py  networks.py  networks_fast.py  ppo.py  profiling.py  train.py
mcrl/utils/: __init__.py  analytics.py  checkpoint.py  observations.py  observations_fast.py  rewards.py
scripts/: activate.sh  setup.sh
